[tool.poetry]
name = "ska-tmc-common"
version = "0.1.62"
description = "SKA TMC common contains common classes required for Telescope Monitoring and Control(TMC)."
authors = ["Team NCRA"]
license = "BSD-3-Clause"

packages = [
    { include = "ska_tmc_common", from = "src" },
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.23.0"
pytango = "9.3.3"
jsonschema = "^4.0.1"
marshmallow = "^3.14.1"
fire = "^0.4.0"
black = "^22.1.0"
ska-ser-logging = "^0.4.1"
ska-tango-base = "^0.11.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^2.10.1"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.4.0"
coverage = "^6.2"
pylint = "^2.12.2"
pylint2junit = "^1.0.1"
junitparser = "^2.2.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-rst-docstrings = "^0.2.5"
docstr-coverage = "^2.1.1"
darglint = "^1.8.1"
mock = "^4.0.3"
pylint-junit = "^0.3.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
