[tool.poetry]
name = "ska-tmc-common"
version = "0.16.7"
description = "SKA TMC common contains common classes required for Telescope Monitoring and Control(TMC)."
authors = ["Team Himalaya", "Team Sahyadri"]
license = "BSD-3-Clause"

packages = [
    { include = "ska_tmc_common", from = "src" },
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.23.0"
pytango = "9.5.0"
jsonschema = "^4.0.1"
marshmallow = "^3.14.1"
fire = "^0.4.0"
black = "^23.3.0"
ska-ser-logging = "^0.4.1"
ska-tango-base = "1.0.0"
ska-tango-testing = "0.6.0"
katpoint = "1.0a2"
ska-telmodel = "1.15.1"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-xdist = "^2.4.0"
coverage = "^6.2"
pylint = "^3.1.0"
pylint2junit = "^1.0.1"
junitparser = "^2.2.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-rst-docstrings = "^0.3.0"
docstr-coverage = "^2.1.1"
darglint = "^1.8.1"
pylint-junit = "^0.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[tool.poetry.group.docs.dependencies]
docutils = "^0.18.1"
Sphinx = "^5.1.1"
ska-ser-sphinx-theme = "^0.1.1"
sphinx-autodoc-typehints = "^1.19.3"
sphinxcontrib-plantuml = "^0.22"
typing_extensions  = "^4.3.0"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
