[aliases]
test=pytest

[coverage:run]
branch = True
source = tmc.common
data_file = common_coverage

[tool:pytest]
testpaths = tests
addopts = --forked
          --verbose
          --json-report
          --json-report-file=htmlcov/report.json
          --cov-branch
          --cov-report term
          --cov-report html
          --cov-report xml
          --cov=tmc.common
          --junitxml=/build/reports/unit-tests.xml
console_output_style = progress
junit_family = legacy

[metadata]
description-file = README.rst

