# [aliases]
# test=pytest

# [coverage:run]
# branch = True
# source = ska_tmc_common
# data_file = common_coverage

# [tool:pytest]
# testpaths = tests
# addopts = --forked
#           --verbose
#           --json-report
#           --json-report-file=htmlcov/report.json
#           --cov-branch
#           --cov-report term
#           --cov-report html
#           --cov-report xml
#           --cov=ska_tmc_common
#           --junitxml=/build/reports/unit-tests.xml
# console_output_style = progress
# junit_family = legacy

# [metadata]
# description-file = README.rst

